Replace deprecated call to Class.newInstanct() with Class.getDeclaredConstructor().newInstance()